Add default method getEqualsClass()