@@ -1,13 +1,11 @@
 package io.github.alaugks.spring.messagesource.xliff.catalog.xliff;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-public class Xliff12XliffIdentifier implements XliffIdentifierInterface {
+public final class Xliff12XliffIdentifier implements XliffIdentifierInterface {
 
     // https://docs.oasis-open.org/xliff/v1.2/xliff-profile-html/xliff-profile-html-1.2.html#General_Identifiers
-    private List<String> unitIdentifiers = new ArrayList<>(Arrays.asList("resname", "id"));
+    private List<String> unitIdentifiers = List.of("resname", "id");
 
     public Xliff12XliffIdentifier() {
     }
@@ -18,6 +16,6 @@ public class Xliff12XliffIdentifier implements XliffIdentifierInterface {
 
     @Override
     public List<String> getList() {
-        return unitIdentifiers;
+        return this.unitIdentifiers;
     }
 }
